microservices/ms_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms
  labels:
    istio-injection: enabled
