microservices/service-book-deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
      version: stable
  template:
    metadata:
      labels:
        app: book-service
        version: stable
    spec:
      containers:
        - name: book-service
          image: localhost:5000/book-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
