microservices/service-book-deployment.yaml
# service-book-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: localhost:5000/book-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: ms
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  selector:
    app: book-service
