microservices/service-book-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: ms
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  selector:
    app: book-service
