microservices/service-library-deployment.yaml
# service-library-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-service
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-service
  template:
    metadata:
      labels:
        app: library-service
    spec:
      containers:
        - name: library-service
          image: localhost:5000/library-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: library-service
  namespace: ms
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081
  selector:
    app: library-service
