microservices/service-sales-deployment.yaml
# service-sales-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
        - name: sales-service
          image: localhost:5000/sales-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: sales-service
  namespace: ms
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30082
  selector:
    app: sales-service
