microservices/service-search-deployment.yaml
# service-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: localhost:5000/search-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: ms
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30083
  selector:
    app: search-service
