microservices/gateway.yaml
# gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ms-gateway
  namespace: ms
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: book-service
  namespace: ms
spec:
  hosts:
    - "*"
  gateways:
    - ms-gateway
  http:
    - match:
        - uri:
            prefix: /books
      route:
        - destination:
            host: book-service.ms.svc.cluster.local
            port:
              number: 80
